<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compare_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compare_description"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="6sp"/>

    <LinearLayout
        android:id="@+id/compararparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/text"

        android:layout_marginVertical="16sp"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp">
        <EditText
            android:id="@+id/text1"
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first">
        </EditText>
        <Space
            android:layout_width="32dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/text2"
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_second">
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/botoncomparar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compare_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compararparent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/botoncomparar">
        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=''
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/botoncomparar"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>